Replace com.google.common.collect.ImmutableMap com.google.common.collect.ImmutableList com.google.common.base.Optional with core java classes