@@ -2,10 +2,9 @@ package com.glassdoor.planout4j.planout;
 
 import com.glassdoor.planout4j.planout.ops.random.UniformChoice;
 import com.glassdoor.planout4j.util.Helper;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.junit.Test;
 
+import java.util.List;
 import java.util.Map;
 
 import static org.junit.Assert.*;
@@ -24,16 +23,16 @@ public class AssignmentTest {
     @Test
     public void testSetGetUniform() {
         Assignment a = new Assignment(tester_salt, null);
-        Map<String, String> varNameToChoice = ImmutableMap.of("foo", "b", "bar", "a", "baz", "a");
+        Map<String, String> varNameToChoice = Map.of("foo", "b", "bar", "a", "baz", "a");
         for (String var : varNameToChoice.keySet()) {
-            a.set(var, new UniformChoice<>(ImmutableList.of("a", "b"), 4));
+            a.set(var, new UniformChoice<>(List.of("a", "b"), 4));
             assertEquals(varNameToChoice.get(var), a.get(var));
         }
     }
 
     @Test
     public void testOverrides() {
-        Map<String, Object> overrides = Helper.cast(ImmutableMap.of("x", 42, "y", 43));
+        Map<String, Object> overrides = Helper.cast(Map.of("x", 42, "y", 43));
         Assignment a = new Assignment(tester_salt, overrides);
         a.set("x", 5);
         a.set("y", 6);
@@ -46,7 +45,7 @@ public class AssignmentTest {
         Assignment a = new Assignment(tester_salt, null);
         assertEquals(tester_salt, a.get("experiment_salt"));
         a.set("x", 42);
-        assertEquals(ImmutableMap.of("x", 42), a.get("data"));
+        assertEquals(Map.of("x", 42), a.get("data"));
     }
 
 }
